[package]
name = "Betting"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true   
